--- a/app/backend/package.json
+++ b/app/backend/package.json
@@ -8,6 +8,7 @@
     "test": "mocha -r ts-node/register ./src/tests/*$NAME*.{test,spec}.ts -t 10000 --exit",
     "test:coverage": "nyc npm run test",
     "test:coverage:json": "nyc --reporter=json-summary npm run test",
+    "test:integration": "mocha --require ts-node/register src/tests/*.test.ts --exit",
     "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
     "prestart": "npm run build && npm run db:reset",
     "start": "node .",
@@ -24,7 +25,7 @@
     "@types/bcryptjs": "2.4.2",
     "@types/chai": "4.3.0",
     "@types/chai-http": "4.2.0",
-    "@types/cors": "2.8.12",
+    "@types/cors": "^2.8.12",
     "@types/express": "4.17.13",
     "@types/jsonwebtoken": "8.5.6",
     "@types/mocha": "9.1.0",
@@ -53,10 +54,12 @@
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
-    "cors": "2.8.5",
+    "cors": "^2.8.5",
     "dotenv": "10.0.0",
     "express": "4.17.1",
+    "http-status-codes": "^2.2.0",
     "jest": "27.4.3",
+    "joi": "^17.6.4",
     "jsonwebtoken": "8.5.1",
     "mysql2": "2.3.3",
     "sequelize": "6.9.0"
